--- a/configs/fluighubgeleng-prod.properties
+++ b/configs/fluighubgeleng-prod.properties
@@ -24,4 +24,5 @@ endpoint.htmltopdf=true
 endpoint.mergepdf=false
 endpoint.process=false
 #Datasets
-datasetId=dsMoverAtividadeProcesso
+datasets=fluighubgeleng
+datasets.permitidos=datasetId=dsMoverAtividadeProcesso
