--- a/.github/workflows/ci-build-unique.yml
+++ b/.github/workflows/ci-build-unique.yml
@@ -62,8 +62,8 @@ jobs:
 
           HOST=$(jq -r --arg id "$CLIENT_ID" '.[$id].host' clientes.json)
           PORT=$(jq -r --arg id "$CLIENT_ID" '.[$id].port' clientes.json)
-          USERNAME=$(jq -r --arg id "$CLIENT_ID" '.[$id].username')
-          PASSWORD=$(jq -r --arg id "$CLIENT_ID" '.[$id].password')
+          USERNAME=$(jq -r --arg id "$CLIENT_ID" '.[$id].username' clientes.json)
+          PASSWORD=$(jq -r --arg id "$CLIENT_ID" '.[$id].password' clientes.json)
 
           if [ "$HOST" = "null" ] || [ "$PORT" = "null" ] || [ "$USERNAME" = "null" ] || [ "$PASSWORD" = "null" ]; then
             echo "❌ Cliente inválido ou dados incompletos: $CLIENT_ID"
