--- a/.github/workflows/ci-build-unique.yml
+++ b/.github/workflows/ci-build-unique.yml
@@ -1,3 +1,4 @@
+
 name: Deploy Homolog Unique
 on:
   workflow_dispatch:
@@ -15,6 +16,8 @@ on:
         type: choice
         options:
           - main
+          - fluighub2-teste
+          - dev
       cliente_ID:
         description: "ID do cliente (nome do arquivo .properties)"
         required: true
@@ -30,6 +33,7 @@ on:
           - geleng
           - motric
           - rdg
+          - samtronic
           - sebreaam
           - sebraepb
           - sebraern
@@ -42,6 +46,7 @@ jobs:
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
+        
 
       - name: Instalar dependências
         run: pip install -r jobs/requirements.txt
@@ -89,19 +94,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: login_fluig
+    env: 
+        GH_PATH: ${{ secrets.GH_PATH}}
     steps:
       - name: Checar o repositório
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # pega todo o histórico
+        #run: git clone https://x-access-token:${{ secrets.GH_PATH }}@github.com/StrategiConsultoria/fluighub.git
+
 
       - name: Configurar Git
-        env: 
-          GH_PATH: ${{ secrets.GH_PATH}}
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-    
+          git config user.name "anderson-henriqq"
+          git config user.email "anderson.henriq10@gmail.com"
+          
 
       - name: Criar branch temporária
         run: |
@@ -144,7 +151,7 @@ jobs:
           echo "application.version=${{ env.LAST_TAG }}-${{ github.run_number }}" >> fluigshub/src/main/resources/application.info
           echo "view.file=view.ftl" >> fluigshub/src/main/resources/application.info
           echo "edit.file=edit.ftl" >> fluigshub/src/main/resources/application.info
-          echo "locale.file.base.name=fluighub${{ github.event.inputs.cliente_ID }}" >> fluigshub/src/main/resources/application.info
+          echo "locale.file.base.name=fluighub" >> fluigshub/src/main/resources/application.info
 
       - name: Salvar versão como artifact
         uses: actions/upload-artifact@v4
@@ -152,12 +159,13 @@ jobs:
           name: last_tag
           path: last_tag.txt
 
-      - name: Fazer commit e push para destino
-        run: |
-          git add fluigshub/src/main/webapp/resources/config.properties
-          git add fluigshub/src/main/resources/application.info
-          git commit -m "Adiciona config.properties e application.info do cliente ${{ github.event.inputs.cliente_ID }}"
-          git push fluighub${{ github.event.inputs.cliente_ID }}/${{ github.event.inputs.base_branch }} --force
+      # - name: Fazer commit e push para destino
+      #   run: |
+      #     git remote set-url origin https://x-access-token:${{env.GH_PATH}}@github.com/StrategiConsultoria/fluighub.git
+      #     git add fluigshub/src/main/webapp/resources/config.properties
+      #     git add fluigshub/src/main/resources/application.info
+      #     git commit -m "Adiciona config.properties e application.info do cliente ${{ github.event.inputs.cliente_ID }}"
+      #     git push https://x-access-token:${{env.GH_PATH}}@github.com/StrategiConsultoria/fluighub.git fluighub${{ github.event.inputs.cliente_ID }}/${{ github.event.inputs.base_branch }} --force
 
       - name: Configurar Java 11 (OpenJDK)
         uses: actions/setup-java@v3
@@ -215,26 +223,34 @@ jobs:
         run: pip install -r jobs/requirements.txt
 
       - name: Extrair dados do cliente
+        env:
+          JSON_HOMOLOG: ${{ secrets.SERVIDORES_HOMOLOG_JSON }}
+          JSON_PROD: ${{ secrets.SERVIDORES_PROD_JSON }}
         run: |
           CLIENT_ID="${{ github.event.inputs.cliente_ID }}"
-          JSON='${{ secrets.SERVIDORES_HOMOLOG_JSON }}'
-      
-          HOST=$(jq -r --arg id "$CLIENT_ID" '.[$id].host' <<< "$JSON")
-          PORT=$(jq -r --arg id "$CLIENT_ID" '.[$id].port' <<< "$JSON")
-          USERNAME=$(jq -r --arg id "$CLIENT_ID" '.[$id].username' <<< "$JSON")
-          PASSWORD=$(jq -r --arg id "$CLIENT_ID" '.[$id].password' <<< "$JSON")
-      
+
+          if [ "${{ github.event.inputs.server }}" = "homologação" ]; then
+            echo "$JSON_HOMOLOG" > clientes.json
+          else
+            echo "$JSON_PROD" > clientes.json
+          fi
+
+          HOST=$(jq -r --arg id "$CLIENT_ID" '.[$id].host' clientes.json)
+          PORT=$(jq -r --arg id "$CLIENT_ID" '.[$id].port' clientes.json)
+          USERNAME=$(jq -r --arg id "$CLIENT_ID" '.[$id].username' clientes.json)
+          PASSWORD=$(jq -r --arg id "$CLIENT_ID" '.[$id].password' clientes.json)
+
           if [ "$HOST" = "null" ] || [ "$PORT" = "null" ] || [ "$USERNAME" = "null" ] || [ "$PASSWORD" = "null" ]; then
             echo "❌ Cliente inválido ou dados incompletos: $CLIENT_ID"
             exit 1
           fi
-      
-          echo "✅ Dados do cliente carregados"
+
+          echo "✅ Dados do cliente carregados com sucesso!"
           echo "FLUIG_HOST=$HOST" >> $GITHUB_ENV
           echo "FLUIG_PORT=$PORT" >> $GITHUB_ENV
           echo "FLUIG_USERNAME=$USERNAME" >> $GITHUB_ENV
           echo "FLUIG_PASSWORD=$PASSWORD" >> $GITHUB_ENV
-
+ 
       - name: Descobrir caminho do arquivo WAR
         id: descobrir_caminho
         run: |
@@ -245,32 +261,32 @@ jobs:
         run: |
           python jobs/upload.py
 
-      - name: Renomeia branch se base_branch for main
-        if: ${{ github.event.inputs.base_branch == 'main' }}
-        run: |
-          echo "Base branch é main. Iniciando processo de renomeação da branch..."
+      # - name: Renomeia branch se base_branch for main
+      #   if: ${{ github.event.inputs.base_branch == 'main' }}
+      #   run: |
+      #     echo "Base branch é main. Iniciando processo de renomeação da branch..."
 
-          # Define nomes
-          OLD_BRANCH="fluighub${{ github.event.inputs.cliente_ID }}/${{ github.event.inputs.base_branch }}"
-          NEW_BRANCH="fluighub${{ github.event.inputs.cliente_ID }}/release/${{ env.LAST_TAG }}"
+      #     # Define nomes
+      #     OLD_BRANCH="fluighub${{ github.event.inputs.cliente_ID }}/${{ github.event.inputs.base_branch }}"
+      #     NEW_BRANCH="fluighub${{ github.event.inputs.cliente_ID }}/release/${{ env.LAST_TAG }}"
 
-          echo "Antiga branch: $OLD_BRANCH"
-          echo "Nova branch: $NEW_BRANCH"
+      #     echo "Antiga branch: $OLD_BRANCH"
+      #     echo "Nova branch: $NEW_BRANCH"
 
-          # Troca para a branch antiga (precisa existir localmente)
-          git fetch origin $OLD_BRANCH
-          git checkout -b "$OLD_BRANCH" origin/$OLD_BRANCH
+      #     # Troca para a branch antiga (precisa existir localmente)
+      #     git fetch origin $OLD_BRANCH
+      #     git checkout -b "$OLD_BRANCH" origin/$OLD_BRANCH
 
-          # Renomeia localmente
-          git branch -m "$NEW_BRANCH"
+      #     # Renomeia localmente
+      #     git branch -m "$NEW_BRANCH"
 
-          # Push da nova branch para o remoto
-          git push origin "$NEW_BRANCH"
+      #     # Push da nova branch para o remoto
+      #     git push origin "$NEW_BRANCH"
 
-          # (Opcional) Apaga a branch antiga do remoto
-          # git push origin --delete "$OLD_BRANCH"
+      #     # (Opcional) Apaga a branch antiga do remoto
+      #     # git push origin --delete "$OLD_BRANCH"
 
-          echo "Branch renomeada e enviada com sucesso."
+      #     echo "Branch renomeada e enviada com sucesso."
 
       - name: Limpar arquivos temporários
         if: always()
