--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
-
-
-"devDependencies": {
-  "prettier": "3.2.5"
-},
-
-"scripts": {
-  "format": "prettier . --write",
-  "check-format": "prettier . --check"}
+{
+  "name": "fluighub",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "format": "prettier . --write",
+    "check-format": "prettier . --check"
+  },
+  "devDependencies": {
+    "prettier": "3.2.5"
+  }
+}
