--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Run Prettier fix
         run: |
             echo "✨ Applying Prettier fixes..."
-            yarn prettier . --write --ignore-path .prettierignore
+            yarn prettier . --write --ignore-path .prettierignore --ignore "**/.github/**"
+
 
       # Faz commit automático com o autofix.ci (exceto .github)
       - name: Commit fixes via autofix.ci
