--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,5 @@
     "singleQuote": true,
     "printWidth": 200,
     "trailingComma": "none",
-    "preserveEmptyLines": true
+    //"preserveEmptyLines": true
 }
