testando configuraçoes de isaac

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -28,13 +28,13 @@ jobs:
         run: |
           echo "Checking code format..."
           # Rodar Prettier apenas nos arquivos de código, excluindo .github
-          yarn prettier "**/*.{js,json,ts,tsx,md}" "!**/.github/**" --check || echo " Some files need formatting"
+          yarn prettier "**/*.{js,json,ts,tsx,md,css,html}" "!**/.github/**" --check || echo " Some files need formatting"
 
       # Depois aplica correções automaticamente
       - name: Run Prettier fix
         run: |
           echo "Applying Prettier fixes..."
-          yarn prettier "**/*.{js,json,ts,tsx,md}" "!**/.github/**" --write
+          yarn prettier "**/*.{js,json,ts,tsx,md,css,html}" "!**/.github/**" --write
 
       # Faz commit automático com o autofix.ci, apenas em pastas seguras
       - name: Commit fixes via autofix.ci
