--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "printWidth": 100
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "htmlWhitespaceSensitivity": "ignore",
+    "bracketSameLine": true,
+    "semi": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "printWidth": 200,
+    "trailingComma": "none"
 }
